layout improvement and logic
Signed-off-by: VillageR88 <villager88pl@gmail.com>

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,6 +67,6 @@ pre {
   word-wrap: break-word;
 }
 
-.group1Parrent:not(:disabled):hover .group1Child {
+.group1Parent:hover .group1Child {
   @apply underline;
 }
